<resources>
    <string name="app_name">SyzarSoft Store</string>
    <string name="but"> skip</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in or register</string>
    <string name="sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="full">"Full Name"</string>
    <string name="signup">"SignUp"</string>

    <string name="favorite">"❤ Favorite"</string>


</resources>